[package]
name = "mqttstunclient"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[features]
#default = ["esp-idf-mqtt", "native"]
default = ["ru-mqtt"]
native = ["esp-idf-sys/native"]
esp-idf-mqtt = ["esp-idf-svc", "esp-idf-hal", "esp-idf-sys"]
ru-mqtt = ["rumqttc", "env_logger"]

[dependencies]
chacha20poly1305 = "0.10"                           # ChaCha20暗号化
rumqttc = { version = "0.24", optional = true }                  
log = { version = "0.4", default-features = false }
rand = { version = "0.9.1", features = ["std"] }
env_logger = { version = "0.11.8", optional = true }
esp-idf-sys = { version = "0.36", features = ["binstart"], optional = true }
esp-idf-svc = { version = "0.51", features = ["experimental"], optional = true }
esp-idf-hal = { version = "0.45.2", optional = true }
wksocket = { path = "../wksocket" }

[build-dependencies]
embuild = "0.33"
anyhow = "1"
cc = "1.1.31"
